fix code wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,9 @@
     border: none;
 }
 
-*,*::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: inherit;
 }
 
@@ -123,8 +125,6 @@ nav a:hover {
     background-attachment: fixed;
     background-size: cover;
     overflow: hidden;
-
-
 }
 
 /* Cover text */
@@ -141,7 +141,6 @@ nav a:hover {
 
 #cover-text p {
     color: #d9c27e;
-
 }
 
 /* Nav Hero image and h1  for small screens */
@@ -160,7 +159,6 @@ nav a:hover {
     #cover-text {
         color: #d9c27e;
         width: 50%;
-
     }
 
     #cover-text h1 {
@@ -335,7 +333,6 @@ nav a:hover {
     display: block;
     margin: auto;
     padding-top: 100px;
-
 }
 
 #class-image {
@@ -606,23 +603,23 @@ nav a:hover {
     margin-top: 5%;
 }
 
-    #my-phone-details>p>a {
-        color: inherit;
-        text-decoration: none;
-    }
+#my-phone-details>p>a {
+    color: inherit;
+    text-decoration: none;
+}
 
-    #my-email>p>a {
-       color: inherit;
-            text-decoration: none;
-    }
+#my-email>p>a {
+    color: inherit;
+    text-decoration: none;
+}
 
-    #my-phone-details>p>a:hover {
-        text-decoration: underline;
-    }
+#my-phone-details>p>a:hover {
+    text-decoration: underline;
+}
 
-    #my-email>p>a:hover {
-            text-decoration: underline;
-    }
+#my-email>p>a:hover {
+    text-decoration: underline;
+}
 
 /* Contact form */
 #contact-form-container {
